@@ -1,8 +1,14 @@
-DIST combustion-0.5.1.gem 13312 SHA256 2c41a6faa674c1ba0e5d4ac428b1bebd0e63760952e0fc64b36c0c45343bcdc5 SHA512 35d60fd7aae5b28ec909d404a27cc199b65865feeaee66ef691eb4175327324d6007ffc45629d8442f2cf5f4ef25ae254eafa67884943037dda798c196e34af7 WHIRLPOOL f7e2d7c28b74292f57d573a3fe6cd141602eea985797678e288c58ede6d5a77d8286895cc1cc99d2d2f8fd7b60303015629b56c941d7c74abd296c5fadd1634d
-DIST combustion-0.5.2.gem 13312 SHA256 b599e01d8ff2a261f11dad6b5a33edfd3bd318d36a37e02b84d2ebe9ad880300 SHA512 f7d654d63415499bca473b7657aef92a78a53a80657840883a12f740100c4858d114b99dbdec822a21ad47047985422c81d90452895e27a33db02096fabc4fb9 WHIRLPOOL 8d926db506b9f877aabfa4a28cf03d6d056a4c74ae9f0e0596d5e727d85f54ea71cfff3c7d8f720098006d1c7a728b4974d0c964d6202355b2d006a698b7ee22
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST combustion-0.5.3.gem 13312 SHA256 178346d36b9bb271aa8e6d1cba45fd0d463ccff1b589f70043eb3d995b650220 SHA512 790f0ec33c565678bdc43a09490bec233e8746cd657efcb620ec764ba297c4f9b8e656b004c7889a1725466afc186db9372dc27a1592b3981fd9d905c9920378 WHIRLPOOL e321b48ff1f98a1aae28f5d7f84648b58ce9bb6a946561f6508de6cad75eb639f21fab84ac268250dadc78f5f0ba30cb34b00f677b4b6dc313786cb387af563e
-EBUILD combustion-0.5.1.ebuild 602 SHA256 62f1a14b503d926682654cc9609a30a2cdcee9686db31ffab96abb658252e7cc SHA512 4f7d36ad1af1abd9997b9060b2c3c6b5e3687b07d0985e871e2d14479838235d04a854baea04acdecb7b63e256fb076fdc6a34576593d888928b1507e176df44 WHIRLPOOL 3078ac057f4999e5a21f023fa16e662ecb1271e773b95b6937055a78941cf9d8f9f73f4a2b30ec515b079a9ea6309214ffa8045b90df7e5217419e065c7d6b80
-EBUILD combustion-0.5.2.ebuild 617 SHA256 2a6e526cec7c2593c0ac9369ec99f42b0dc9afdb7c80e25d2ae267787ae27f30 SHA512 b636043efb73d540ad4a1cc0aca91f87ca45b11fb0662ed6f3bca41f60d9041f70b511b1840e652bbe5b7cfc71e2e097168f8f966809cb158105519222ec7f8e WHIRLPOOL ffb8273cbb52b14604e2ee3280046c988239e68ae0f7251545238cd0aa4296c1d8a42e24f7402c1e2317fa8e52fd5ced84008fa49d0eba0f79871c0c7ae1e9f9
 EBUILD combustion-0.5.3.ebuild 616 SHA256 ab8f7f70bafb7c662f043589abcbba85fc88db4043c445252919accbeebe0edf SHA512 cc301c5c8e429d65e80b3ec3cb99d6be7aab14e55a1b48732ae1965d928b100fa8133b06e12171ac8606e5f6cc52301893418a0e52bb05063b5550d24b15dafd WHIRLPOOL 1eb52f17ceddd596418708db3dfe6d1a3df6ee4c72e815f8d5dead5e4d2fd3d4eb6f8e6ddf75864805722bc216706dc4c69157bd68f8cdd44037ce74b9a27089
-MISC ChangeLog 638 SHA256 3ed6ad59cd6a33f046f83a449b9b36c9a2e3f4e88977d849f7b62914e76d5c01 SHA512 d2d4bcb4ece69f5f5562d3c66df36e68d53751b407528013a472a22dc95b3e64e25bef7ca710694e6b37e59f47aedc33b675a41d1d6c7da2babd89d3f89487f8 WHIRLPOOL 7353780e4a19438c40c2112b640f57887b01f58a56183dc10d0dea670942ffe572ed0f994a250e7b23b500e2e4dffa57a57aa8d4dfed390f01fa61267adee64a
+MISC ChangeLog 755 SHA256 68580f0719bda23b418bb07ffa7d0ad4b572e6b2c5c7bdd4c949832acb65540d SHA512 2ea52b82a7732f2c467f3b580c1a899c2c742aa59701d3b08b9314ac5d43ed9970437395872cbff9364ad130e6174a6f6bc8569004c2707825b0402da16df2cd WHIRLPOOL d6a72e4b5a59263267071ea60e80e551d5b1867d1a19a5e6464de72f071d253cc81af056e4bcdbeaf3a9b15dae02ce44423acb27e0b93084580f177db931edee
 MISC metadata.xml 157 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c SHA512 0cec73b966de88015ea4c7212723d848d367608aa93658bb945f298a8000c4ba8aba73c9eb8481859fb5bbed45e80dae32c628caf81e027a4ad8eafa7e632851 WHIRLPOOL 4da25c81e21173ad8b7b5f35b056264869d9a16741062aa4422c5ea1aa9e73da8eb700b0d54de84c169d702fbb3f41ed157c9dc7c9daac110849ae84715c051b
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
+
+iF4EAREIAAYFAlT+j6MACgkQiIP6VqMIqNefZwD/TVjX1nqfvUzB4NlhHv+a3bV3
+m3sM9OZZuBGNTPEKotMA/2dOmilIk+2lBSlAg2XqdqaAK5vOvqEScm9lv8MYS1o7
+=wMHs
+-----END PGP SIGNATURE-----
