@@ -1,26 +1,0 @@
-# Copyright 1999-2014 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/combustion/combustion-0.5.2.ebuild,v 1.1 2014/07/18 05:30:00 graaff Exp $
-
-EAPI=5
-USE_RUBY="ruby19 ruby20 ruby21"
-
-RUBY_FAKEGEM_TASK_DOC=""
-RUBY_FAKEGEM_TASK_TEST=""
-RUBY_FAKEGEM_EXTRADOC="README.md"
-
-inherit ruby-fakegem
-
-DESCRIPTION="Elegant Rails Engine Testing"
-HOMEPAGE="https://github.com/pat/combustion"
-LICENSE="MIT"
-
-KEYWORDS="~amd64"
-SLOT="0"
-IUSE=""
-
-ruby_add_rdepend "
-	>=dev-ruby/activesupport-3.0.0
-	>=dev-ruby/railties-3.0.0
-	>=dev-ruby/thor-0.14.6
-"
