@@ -1,14 +1,0 @@
-DEFINED_PHASES=compile configure install prepare setup test unpack
-DEPEND=test? ( ruby_targets_ruby19? ( >=dev-ruby/activesupport-3.0.0[ruby_targets_ruby19] >=dev-ruby/railties-3.0.0[ruby_targets_ruby19] >=dev-ruby/thor-0.14.6[ruby_targets_ruby19] ) ruby_targets_ruby20? ( >=dev-ruby/activesupport-3.0.0[ruby_targets_ruby20] >=dev-ruby/railties-3.0.0[ruby_targets_ruby20] >=dev-ruby/thor-0.14.6[ruby_targets_ruby20] ) ruby_targets_ruby21? ( >=dev-ruby/activesupport-3.0.0[ruby_targets_ruby21] >=dev-ruby/railties-3.0.0[ruby_targets_ruby21] >=dev-ruby/thor-0.14.6[ruby_targets_ruby21] ) ) ruby_targets_ruby19? ( dev-lang/ruby:1.9 ) ruby_targets_ruby20? ( dev-lang/ruby:2.0 ) ruby_targets_ruby21? ( dev-lang/ruby:2.1 ) ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) ruby_targets_ruby20? ( virtual/rubygems[ruby_targets_ruby20] ) ruby_targets_ruby21? ( virtual/rubygems[ruby_targets_ruby21] ) test? ( ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) ruby_targets_ruby20? ( virtual/rubygems[ruby_targets_ruby20] ) ruby_targets_ruby21? ( virtual/rubygems[ruby_targets_ruby21] ) )
-DESCRIPTION=Elegant Rails Engine Testing
-EAPI=5
-HOMEPAGE=https://github.com/pat/combustion
-IUSE=test elibc_FreeBSD ruby_targets_ruby19 ruby_targets_ruby20 ruby_targets_ruby21 test
-KEYWORDS=~amd64
-LICENSE=MIT
-RDEPEND=ruby_targets_ruby19? ( >=dev-ruby/activesupport-3.0.0[ruby_targets_ruby19] >=dev-ruby/railties-3.0.0[ruby_targets_ruby19] >=dev-ruby/thor-0.14.6[ruby_targets_ruby19] ) ruby_targets_ruby20? ( >=dev-ruby/activesupport-3.0.0[ruby_targets_ruby20] >=dev-ruby/railties-3.0.0[ruby_targets_ruby20] >=dev-ruby/thor-0.14.6[ruby_targets_ruby20] ) ruby_targets_ruby21? ( >=dev-ruby/activesupport-3.0.0[ruby_targets_ruby21] >=dev-ruby/railties-3.0.0[ruby_targets_ruby21] >=dev-ruby/thor-0.14.6[ruby_targets_ruby21] ) ruby_targets_ruby19? ( dev-lang/ruby:1.9 ) ruby_targets_ruby20? ( dev-lang/ruby:2.0 ) ruby_targets_ruby21? ( dev-lang/ruby:2.1 ) ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) ruby_targets_ruby20? ( virtual/rubygems[ruby_targets_ruby20] ) ruby_targets_ruby21? ( virtual/rubygems[ruby_targets_ruby21] )
-REQUIRED_USE=|| ( ruby_targets_ruby19 ruby_targets_ruby20 ruby_targets_ruby21 )
-SLOT=0
-SRC_URI=mirror://rubygems/combustion-0.5.2.gem
-_eclasses_=eutils	998e5931fb95b10a6a11ec796ada2759	java-utils-2	f02d3e4777b404c719a5a6479c37c6e3	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	ruby-fakegem	d4f8591e9b20b106327e9d143eb13da5	ruby-ng	c79a9fd7644eefe8009be02a82648e1f	toolchain-funcs	a3db8057ea0903a9ebea4e46aab28ff9	versionator	cd0bcdb170807e4a1984115e9d53a26f
-_md5_=72c99e138642b1be60725e5375c46e62
