@@ -1,6 +1,12 @@
 # ChangeLog for dev-ruby/trollop
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/trollop/ChangeLog,v 1.26 2014/10/30 13:58:42 mrueg Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/trollop/ChangeLog,v 1.27 2015/03/10 06:29:17 graaff Exp $
+
+*trollop-2.1.1 (10 Mar 2015)
+
+  10 Mar 2015; Hans de Graaff <graaff@gentoo.org> +trollop-2.1.1.ebuild:
+  Version bump. Drop alpha, hppa, ia64, ppc, ppc64, sparc, prefix due to new
+  chronic dependency, bug 542782.
 
   30 Oct 2014; Manuel Rüger <mrueg@gentoo.org> trollop-1.16.2-r4.ebuild,
   trollop-2.0.ebuild:
